// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`New Stack Button creates correct snapshot 1`] = `
<div>
  <button
    aria-label="add"
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1qiowgr-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Create Stack
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`New Stack Button uses labelPrefix if present 1`] = `
<div>
  <button
    aria-label="add"
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1qiowgr-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Request Stack
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;
